--- a/gym.css
+++ b/gym.css
@@ -40,10 +40,12 @@ nav ul li a {
     color: #fff;
     text-decoration: none;
     font-size: xx-large;
-    justify-items:space-evenly;text-align: center;
+    justify-items:space-evenly;text-align: center; 
+    border:  rebeccapurple 2px;padding: .2vw; border: outset;
+    
 }
 nav ul li a:hover{
-    color: rgb(128, 0, 0);
+    color: rgb(206, 59, 235);
     font-size: 2.02em;
 }
 
@@ -121,18 +123,61 @@ nav ul li a:hover{
     border-radius: 5px;
 }
 
-.page1{background-image: url('3d-gym-equipment copy.jpg'); 
-background-size: cover; padding: 5px;
-background-position: center;position: relative;
-height: 50vw;}
 
-.page2{font-weight: 900;font-size: 4vw;
+
+.page1{background:linear-gradient(to right,black,rgba(120, 9, 255, 0.79),rgb(22, 197, 220))}
+.div1{display: flex;justify-content: space-evenly;}
+.box1{
+    
+    height: 30vw;width: 30vw;
+    margin: 5vw; border-radius:10px; border: solid black;
+    
+}
+.box1 img{width: 100%;height: 100%;
+object-fit: cover;}
+.box2{height: 30vw;width: 30vw;
+    margin: 5vw; border-radius:10px; border: solid black;
+    background:linear-gradient(to right,black,rgba(120, 9, 255, 0.79),rgb(22, 197, 220))
+}
+.box2 img{width: 100%;height: 100%;
+    object-fit: cover;}
+.box3{height: 30vw;width: 30vw;
+    margin: 5vw; border-radius:10px; border: solid black;
+    background:linear-gradient(to right,black,rgba(120, 9, 255, 0.79),rgb(22, 197, 220))
+}
+.box3 img{width: 100%;height: 100%;
+    object-fit: cover;}
+
+
+.page2{font-weight: 900;font-size: 4vw;margin-top: 2vw; text-align: center;
  background-color: #060606; 
 opacity: .7;}
 
+.button2{background-color: red;color: aliceblue;
+font-weight: 800;font-size: 1vw;margin: 1vw;padding: .5vw;
+margin-left: 5vw;}
+.button2:hover{background-color: #ff8e0c;}
 
+.page3{
+    font-weight: 900;font-size: 1.5vw; display: flex;justify-content: space-evenly;
+    background-color: #000;opacity: 1;margin-top: 1vw;
+}
+#text{border: #f96161 5px solid; }
+#text:hover{border: #870fe9 4px solid;}
 
+.page4{background-image: url('pexels-victorfreitas-841130.jpg');
+background-size: cover;background-position: center;position: relative;
+height: 45vw;padding: 1vw;margin-top:  1vw;
+font-size: 4vw;font-weight: 800;}
+#para{background-color: #060606;height: 15vw;
+opacity: .5;margin-top: 8vw;}
 
+#button1{background-color: #ef1800;color: aliceblue; font-weight: 600;
+    height: 4vw;width: 16vw;font-size: 1vw;margin-left: 40%;
+}
+
+.samir{height: 3vw;font-size: 1.1vw;background-color: #060606; font-weight: 900;
+color: #fff; display: flex; justify-content: center;margin: .5vw;padding: .5vw;}
 
 
 
